# Globerce-Capital-Internship

./: FastAPI - Shortcut.lnk  README.md
Projects/collections_client-dev/collections_client-dev/: .gitlab-ci.yml  Dockerfile  config.py  docker-entrypoint.sh  fix_divergence.py  helper.py  main.py  manifest-dev.yml  pyproject.toml  receive.py
Projects/collections_client-dev/collections_client-dev/core/: clent.py
Projects/collections_client-dev/collections_client-dev/core/models/: borrowers.py  credits.py
Projects/collections_client-dev/collections_client-dev/fdc/: client.py
Projects/collections_client-dev/collections_client-dev/k8s/dev/: client.yml
Projects/example/collections_client-COL-344/collections_client-COL-344/: .gitlab-ci.yml  compose-prod.yml  docker-entrypoint.sh  pyproject.toml  setup.cfg
Projects/example/collections_client-COL-344/collections_client-COL-344/collections_client/: main.py  routers.py
Projects/example/collections_client-COL-344/collections_client-COL-344/collections_client/alembic/: env.py
Projects/example/collections_client-COL-344/collections_client-COL-344/collections_client/alembic/versions/: c9e6c9fa00d7_create_portfoliohistory.py
Projects/example/collections_client-COL-344/collections_client-COL-344/collections_client/config/: config.py  log_config.py
Projects/example/collections_client-COL-344/collections_client-COL-344/k8s/dev/: client.yml
Projects/example/collections_client-COL-344/collections_client-COL-344/scripts/: fix_divergence.py  fix_fio_divergence.py
SSH-keys/: KEY  KEY.pub
aioredis/: main.py  (+1 more)
(+82 files in other folders)
