[tool.poetry]
name = "collections_client"
version = "0.1.0"
description = ""
authors = ["sundetali <sundetaliomirzak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uplink = "^0.9.6"
pydantic = "^1.9.0"
pika = "^1.2.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
