[tool.poetry]
name = "collections_client"
version = "0.1.0"
description = ""
authors = ["sundetali <sundetaliomirzak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uplink = "^0.9.6"
pydantic = "^1.9.0"
pika = "^1.2.1"
aiohttp = "^3.8.1"
redis = "^4.3.3"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}
alembic = "^1.8.0"
psycopg2 = "^2.9.3"
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
